--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,13 @@
 padding: 4px;
 }
 
+@media screen and (max-width: 600px) {
+  .card {
+    position: absolute;
+    top: 0;
+  }
+}
+
 .read-the-docs {
   color: #888;
 }
@@ -45,27 +52,3 @@ padding: 4px;
   background-color: bisque;
   animation: heightAnimation 4s infinite;
 }
-/* 
-@keyframes heightAnimation {
-  0% {
-    height: 30px
-  }
-  50%  {
-    height: 230px
-  }
-  100%  {
-    height: 30px
-  }
-}
-
-@keyframes widthAnimation {
-  0% {
-    left: 30px
-  }
-  50%  {
-    left: 900px
-  }
-  100%  {
-    height: 30px
-  }
-} */
